# GPS.SomeIP

./: CMakeLists.txt  LICENSE  README.md
NemaTode/: CMakeLists.txt
NemaTode/src/: NMEAParser.cpp
src/: bbox.cpp  bbox.h  gpscontroller.h  gpsdclient.h  gpsdconnector.cpp  gpsdconnector.h  gpsservice.cpp  gpsservice.h  gpssocketreader.cpp  gpssocketreader.h  gpssomeipclient.cpp  gpsstorage.cpp  gpsstorage.h  igpssocketreaderlistener.h  igpsstoragelistener.h  main copy.cpp  main.cpp  nmeaparser.cpp  nmeaparser.h
src1/: gpscontroller.cpp  gpscontroller.h  gpssomeipclient.cpp  gpssomeipclient.h  igpssomeipclientlistener.h
test/: CMakeLists.txt  doubles.cpp  doubles.h  test_service.cpp
